--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       	<div class=" col-lg-7 col-md-7 col-sm-7 col-xs-12 pull-left media">
         	<h5>竹下 泰幸</h5>
             <!-- <h4>アマチュアエンジニア</h4> -->
-            <p>この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。(340文字)</p>
+            <p>1988年、熊本県出身。子どもの頃から、ものをつくることが好きで、絵本や歌を自作していました。2010年、東京藝術大学音楽環境創造科に入学。文化社会学専攻に所属し、日本の「雑誌史」の研究や映像制作をおこないました。2014年、株式会社博報堂プロダクツ企画演出部に入社。おもにTVCMの企画や演出業務をおこないました。おもなクライアントとしてYAHOO!様、Apple様、トヨタ自動車様などが担当致しました。2019年9月末に退職。地元、九州においてエンジニアとして新しい領域でものづくりをおこなうため、現在転職活動をおこなっています。趣味は筋トレとアニメ鑑賞、タロット占いです。</p>
 <p><a role="button" class="btn btn-primary btn-lg">履歴書（PDF）をダウンロード</a></p>
         </div>
       	
@@ -124,7 +124,7 @@
             <div class="col-md-12">
             	<div class="col-md-6 col-sm-12 media">
                 	<p>
-                  この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。(340文字)
+                  会社員一年目から独学にてプログラミング学習をおこなっていましたが、会社の業務が忙しすぎて挫折。昨年から真剣に取り組むため、東京都内のテックスクールに通い、PHP、MYSQLとSwiftを3ヶ月ずつ勉強しました。それぞれサービスを作りながら覚えました。今年6月にスクールのカリキュラムは終え、インターネット上のチュートリアルをおこなったり、勉強会に参加するなどして自分自身のスキル向上を日常的に心がけています。
                   </p>
                 </div>
             	<div class="col-md-6 col-sm-12">                
@@ -174,7 +174,7 @@
         	<div class="expertiesdesc col-xs-12 col-sm-9 col-md-9 col-lg-9">
             	<h4>博報堂プロダクツ</h4>
                 <h5>CMディレクター / プランナー</h5>
-                <p>この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。(340文字)</p>
+                <p>CMプロダクションである前職では、おもにTVCMの企画、演出業務をおこないました。入社3年目まではおもに企画や絵コンテの制作、撮影準備などのアシスタント業務。4年目以降は自身が監督として出演者のキャスティングや音楽プラン、メディア担当者、クライアントとの折衝など統合的なマネジメント業務もおこないました。おもなCM演出作品としてYAHOO!『Yで追え！』シリーズ、Apple『AppleMusic〜ONE OK ROCK篇〜』、TOYOTA『オリンピック啓蒙ドキュメンタリームービー』などがあります。また、賞歴としてヤングロータス日本予選第二位（2015年）などがあります。</p>
             </div>
         </div>
         <div class="row media">
@@ -186,7 +186,7 @@
         	<div class="expertiesdesc col-xs-12 col-sm-9 col-md-9 col-lg-9">
             	<h4>エンジニア</h4>
                 <h5>独学 / テックスクール</h5>
-                <p>この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。(340文字)</p>
+                <p>そもそも、なにかを生み出すのが好きという理由から、さまざまな表現を試す一貫としてプログラミングの学習を始めました。しかし、独学ではなかなか身につかなかったということがあり、昨年末からテックスクールに通い、本格的に学習を始めました。HTMLやCSSや少し扱ったことがありましたが、PHPやSwiftなどは当初、難しいと感じましたが、論理的に考えながらものを作ることができる体験にやみつきになり、エンジニアとしての転職を考えるまでになりました。通っていたテックスクールは6月に卒業しましたが、それ以降もインターネット上のニュースサイト、ブログサイトなどを見たり、チュートリアルをおこない、また、勉強会やもくもく会に参加するなど日常的な学習は絶えずおこなっています。</p>
             </div>
         </div>
     </div>
@@ -207,7 +207,7 @@
                 </div>
             </div>
         	<div class="expertiesdesc col-xs-12 col-sm-9 col-md-9 col-lg-9">
-            	<h4>音楽環境創造科 文化社会学 映像専攻</h4>
+            	<h4>音楽環境創造科 文化社会学専攻</h4>
                 <h5>東京藝術大学</h5>
                 <p>この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。(340文字)</p>
             </div>
@@ -235,7 +235,10 @@
               <h4>診断サイト</h4>
                 <h5>セブ島留学生のための生活費</h5>
                 <img src ="images/projects/big-images/1.jpg" width = "200px">
-                <p>この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。(340文字)</p>
+                <p>フィリピン、セブ島に語学留学のため訪れる日本人留学生のため、質問に答えると診断結果を見ることができるサイトを制作しました。診断画面の他、管理者画面からは回答者のデータの閲覧や問題の変更をおこなうことができます。同じテックスクールに通っていたメンバー3名とともに、総勢4名のチームで制作をおこないました。企画、TR図の制作、SQLの設定、大部分のコーディング、チームマネジメントをおこないました。</p>
+                <p>サイト（リンク）</p>
+                <p>QIITA（リンク）</p>
+                <p>git（リンク）</p>
             </div>
         </div>
         <div class="row media">
@@ -248,7 +251,10 @@
               <h4>朝、起きれない人のためのアプリ</h4>
                 <h5>筋肉アラーム</h5>
                 <img src ="images/projects/big-images/1.jpg" width = "200px">
-                <p>この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。(340文字)</p>
+                <p>腕立てふせによってのみ、アラームを止めることのできるアプリを制作しました。近接センサーを用い、所定の回数センサーを反応させることで、アラームを止める仕組みをおこなっています。ひとりで制作し、iOSでリリース済みです。</p>
+                <p>サイト（リンク）</p>
+                <p>QIITA（リンク）</p>
+                <p>git（リンク）</p>
             </div>
         </div>
                 <div class="row media">
@@ -261,7 +267,9 @@
               <h4>パーティーピーポーのためのアプリ</h4>
                 <h5>ドッキリサウンド</h5>
                 <img src ="images/projects/big-images/1.jpg" width = "200px">
-                <p>この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。(340文字)</p>
+                <p>テレビでおなじみのドッキリサウンドを楽しめることができるアプリを制作しています。。日本語、英語、韓国語、中国語の言語を選び、使用することを目指しています。まだリリースしていません。</p>
+                <p>YouTube（リンク）</p>
+                <p>git（リンク）</p>
             </div>
         </div>
     </div>
@@ -273,9 +281,8 @@
     <div class="container">
         <div class="heading">
         <h2>どんなエンジニアになりたいか</h2>
-        <h3>I can say i’m quite good at</h3>        
+        <h3>I can say i’m quite good at</h3>
       </div>
-        
         <div class="row media">
           <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
               <div class="expertiesico">
@@ -283,25 +290,11 @@
                 </div>
             </div>
           <div class="expertiesdesc col-xs-12 col-sm-9 col-md-9 col-lg-9">
-              <h4>音楽環境創造科 文化社会学 映像専攻</h4>
-                <h5>東京藝術大学</h5>
-                <p>この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。(340文字)</p>
+              <h4>勉強会を主催したい</h4>
+                <h5>フルスタックエンジニア</h5>
+                <p>こフロント、バック問わず活躍できるフルスタックエンジニアを目指したいです。また、前職でさまざまな職種の方と関わってきた経験を活かし、チームマネジメントなども将来的におこなうことができるようになりたいです。そのために勉強会への参加、またいずれは勉強会の運営などもおこなっていきたいです。</p>
             </div>
         </div>
-         <div class="row media">
-          <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
-              <div class="expertiesico">
-                  2010年4月から<br>2014年3月
-                </div>
-            </div>
-          <div class="expertiesdesc col-xs-12 col-sm-9 col-md-9 col-lg-9">
-              <h4>音楽環境創造科 文化社会学 映像専攻</h4>
-                <h5>東京藝術大学</h5>
-                <p>この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。(340文字)</p>
-            </div>
-        </div>
-
-
     </div>
   </section>
   <!--Education & diploma end -->
