--- a/index.html
+++ b/index.html
@@ -304,7 +304,8 @@
     <div class="container">
       <ul>
         <li><a href="#"><i class="fa fa-twitter fa-2x"></i></a></li>
-        <li><a href="#"><i class="fa fa-facebook fa-2x"></i></a></li>
+        <li><a href="https://www.facebook.com/yasuyuki.takeshita.3" target="_blank"
+><i class="fa fa-facebook fa-2x"></i></a></li>
         <li><a href="#"><i class="fa fa-vimeo-square fa-2x"></i></a></li>
         <li><a href="#"><i class="fa fa-dribbble fa-2x"></i></a></li>
       </ul>
