--- a/index.html
+++ b/index.html
@@ -234,11 +234,11 @@
           <div class="expertiesdesc col-xs-12 col-sm-9 col-md-9 col-lg-9">
               <h4>診断サイト</h4>
                 <h5>セブ島留学生のための生活費</h5>
-                <img src ="images/projects/big-images/1.jpg" width = "200px">
+                <img src ="images/projects/big-images/work01.jpg" width = "200px">
                 <p>フィリピン、セブ島に語学留学のため訪れる日本人留学生のため、質問に答えると診断結果を見ることができるサイトを制作しました。診断画面の他、管理者画面からは回答者のデータの閲覧や問題の変更をおこなうことができます。同じテックスクールに通っていたメンバー3名とともに、総勢4名のチームで制作をおこないました。企画、TR図の制作、SQLの設定、大部分のコーディング、チームマネジメントをおこないました。</p>
-                <p>サイト（リンク）</p>
-                <p>QIITA（リンク）</p>
-                <p>git（リンク）</p>
+                <p><a href = "https://cebucost.herokuapp.com/" target = "_blank">サイト（リンク）</a></p>
+                <p><a href = "https://qiita.com/yasasheee/items/8a83735153e176c80bb3" target = "_blank">Qiita（リンク）</a></p>
+                <p><a href = "https://github.com/tyebone/49costcut" target = "_blank">GitHub（リンク）</a></p>
             </div>
         </div>
         <div class="row media">
@@ -250,11 +250,11 @@
           <div class="expertiesdesc col-xs-12 col-sm-9 col-md-9 col-lg-9">
               <h4>朝、起きれない人のためのアプリ</h4>
                 <h5>筋肉アラーム</h5>
-                <img src ="images/projects/big-images/1.jpg" width = "200px">
+                <img src ="images/projects/big-images/work02.jpg" width = "200px">
                 <p>腕立てふせによってのみ、アラームを止めることのできるアプリを制作しました。近接センサーを用い、所定の回数センサーを反応させることで、アラームを止める仕組みをおこなっています。ひとりで制作し、iOSでリリース済みです。</p>
-                <p>サイト（リンク）</p>
-                <p>QIITA（リンク）</p>
-                <p>git（リンク）</p>
+                <p><a href = "https://apps.apple.com/jp/app/%E7%AD%8B%E8%82%89%E3%82%A2%E3%83%A9%E3%83%BC%E3%83%A0/id1467844948" target = "_blank">ダウンロードページ（リンク）</a></p>
+                <p><a href = "https://github.com/ogikubonemui/muscleAlarm" target = "_blank">GitHub（リンク）</a></p>
+            </div>
             </div>
         </div>
                 <div class="row media">
@@ -266,10 +266,9 @@
           <div class="expertiesdesc col-xs-12 col-sm-9 col-md-9 col-lg-9">
               <h4>パーティーピーポーのためのアプリ</h4>
                 <h5>ドッキリサウンド</h5>
-                <img src ="images/projects/big-images/1.jpg" width = "200px">
+                <img src ="images/projects/big-images/work03.jpg" width = "200px">
                 <p>テレビでおなじみのドッキリサウンドを楽しめることができるアプリを制作しています。。日本語、英語、韓国語、中国語の言語を選び、使用することを目指しています。まだリリースしていません。</p>
-                <p>YouTube（リンク）</p>
-                <p>git（リンク）</p>
+                <p><a href = "https://github.com/ogikubonemui/dokiri" target = "_blank">GitHub（リンク）</a></p>
             </div>
         </div>
     </div>
