[fix]ドッキリアプリ紹介欄の行間を調整

--- a/index.html
+++ b/index.html
@@ -256,8 +256,7 @@
                 <p><a href = "https://github.com/ogikubonemui/muscleAlarm" target = "_blank">GitHub（リンク）</a></p>
             </div>
             </div>
-        </div>
-                <div class="row media">
+        <div class="row media">
           <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
               <div class="expertiesico">
                   Swift
@@ -267,11 +266,11 @@
               <h4>パーティーピーポーのためのアプリ</h4>
                 <h5>ドッキリサウンド</h5>
                 <img src ="images/projects/big-images/work03.jpg" width = "200px">
-                <p>テレビでおなじみのドッキリサウンドを楽しめることができるアプリを制作しています。。日本語、英語、韓国語、中国語の言語を選び、使用することを目指しています。まだリリースしていません。</p>
+                <p>レビでおなじみのドッキリサウンドを楽しめることができるアプリを制作しています。。日本語、英語、韓国語、中国語の言語を選び、使用することを目指しています。まだリリースしていません。</p>
                 <p><a href = "https://github.com/ogikubonemui/dokiri" target = "_blank">GitHub（リンク）</a></p>
             </div>
+            </div>
         </div>
-    </div>
   </section>
   <!--Portfolio end -->
 
