--- a/index.html
+++ b/index.html
@@ -279,18 +279,18 @@
     <div class="container">
         <div class="heading">
         <h2>どんなエンジニアになりたいか</h2>
-        <h3>I can say i’m quite good at</h3>
+        <h3>I want to become what kind of an engineer.</h3>
       </div>
         <div class="row media">
           <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
               <div class="expertiesico">
-                  2010年4月から<br>2014年3月
+                  2019年11月以降<br>
                 </div>
             </div>
           <div class="expertiesdesc col-xs-12 col-sm-9 col-md-9 col-lg-9">
               <h4>勉強会を主催したい</h4>
                 <h5>フルスタックエンジニア</h5>
-                <p>こフロント、バック問わず活躍できるフルスタックエンジニアを目指したいです。また、前職でさまざまな職種の方と関わってきた経験を活かし、チームマネジメントなども将来的におこなうことができるようになりたいです。そのために勉強会への参加、またいずれは勉強会の運営などもおこなっていきたいです。</p>
+                <p>こフロント、バック問わず活躍できるフルスタックエンジニアを目指したいです。また、前職でさまざまな職種の方と関わってきた経験を活かし、チームマネジメントなども将来的におこなうことができるようになりたいです。そのために勉強会への参加、またいずれは勉強会の運営などもおこなっていきたいです。エンジニアの方のコミュニティを作る文化が好きなので、僕自身、日々学んで行く姿勢を忘れないようにしたいです。</p>
             </div>
         </div>
     </div>
