[fix]メニュー画面からの遷移を調整

--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
                     <div class="navbar-collapse collapse">
                       <ul class="nav navbar-nav">
                         <li class="menuItem active"><a href="#wrapper">Home</a></li>
-                        <li class="menuItem"><a href="#aboutus">About Me</a></li>
+                        <li class="menuItem"><a href="#aboutme">About Me</a></li>
                         <li class="menuItem"><a href="#skillset">Skills</a></li>
                         <li class="menuItem"><a href="#experience">Experience</a></li>
                         <li class="menuItem"><a href="#education">Education</a></li>
-                        <li class="menuItem"><a href="#ourwork">Portfolio</a></li>
-                        <li class="menuItem"><a href="#contact">Contact</a></li>
+                        <li class="menuItem"><a href="#portfolio">Portfolio</a></li>
+                        <li class="menuItem"><a href="#target">Target</a></li>
                       </ul>
                     </div>
                 </div>
@@ -88,13 +88,13 @@
   <!--Header end -->
   
  <!--about us start-->
-  <section class="aboutus" id="aboutus">
+  <section class="aboutme" id="aboutme">
     <div class="container">
       <div class="row">
        <div class="col-md-12">
       	<div class="heading">
-        <h2>About me</h2>
-        <h3>A small introduction about my self</h3>        
+        <h2>自己紹介</h2>
+        <h3>私について</h3>        
       </div>
       </div> 
        </div> 
@@ -124,7 +124,7 @@
             <div class="col-md-12">
             	<div class="col-md-6 col-sm-12 media">
                 	<p>
-                  会社員一年目から独学にてプログラミング学習をおこなっていましたが、会社の業務が忙しすぎて挫折。昨年から真剣に取り組むため、東京都内のテックスクールに通い、PHP、MYSQLとSwiftを3ヶ月ずつ勉強しました。それぞれサービスを作りながら覚えました。今年6月にスクールのカリキュラムは終え、インターネット上のチュートリアルをおこなったり、勉強会に参加するなどして自分自身のスキル向上を日常的に心がけています。
+                  会社員一年目から独学にてプログラミング学習をおこなっていましたが、会社の業務が忙しすぎて挫折。昨年から真剣に取り組むため、東京都内のテックスクールに通い、PHP、MYSQLとSwiftを3ヶ月ずつ勉強しました。それぞれサービスを作りながら覚えました。<br>今年6月にスクールのカリキュラムは終え、インターネット上のチュートリアルをおこなったり、書籍での独立、また勉強会に参加するなどして自分自身のスキル向上を日常的に心がけています。
                   </p>
                 </div>
             	<div class="col-md-6 col-sm-12">                
@@ -174,7 +174,7 @@
         	<div class="expertiesdesc col-xs-12 col-sm-9 col-md-9 col-lg-9">
             	<h4>博報堂プロダクツ</h4>
                 <h5>CMディレクター / プランナー</h5>
-                <p>CMプロダクションである前職では、おもにTVCMの企画、演出業務をおこないました。入社3年目まではおもに企画や絵コンテの制作、撮影準備などのアシスタント業務。4年目以降は自身が監督として出演者のキャスティングや音楽プラン、メディア担当者、クライアントとの折衝など統合的なマネジメント業務もおこないました。おもなCM演出作品としてYAHOO!『Yで追え！』シリーズ、Apple『AppleMusic〜ONE OK ROCK篇〜』、TOYOTA『オリンピック啓蒙ドキュメンタリームービー』などがあります。また、賞歴としてヤングロータス日本予選第二位（2015年）などがあります。</p>
+                <p>CMプロダクションである前職では、おもにTVCMの企画、演出業務をおこないました。入社3年目まではおもに企画や絵コンテの制作、撮影準備などのアシスタント業務。4年目以降は自身が監督として出演者のキャスティングや音楽プラン、メディア担当者、クライアントとの折衝など統合的なマネジメント業務もおこないました。<br>おもなCM演出作品としてYAHOO!『Yで追え！』シリーズ、Apple『AppleMusic〜ONE OK ROCK篇〜』、TOYOTA『オリンピックドキュメンタリームービー』などがあります。また、賞歴としてヤングロータス日本予選第二位（2015年）などがあります。</p>
             </div>
         </div>
         <div class="row media">
@@ -186,7 +186,7 @@
         	<div class="expertiesdesc col-xs-12 col-sm-9 col-md-9 col-lg-9">
             	<h4>エンジニア</h4>
                 <h5>独学 / テックスクール</h5>
-                <p>そもそも、なにかを生み出すのが好きという理由から、さまざまな表現を試す一貫としてプログラミングの学習を始めました。しかし、独学ではなかなか身につかなかったということがあり、昨年末からテックスクールに通い、本格的に学習を始めました。HTMLやCSSや少し扱ったことがありましたが、PHPやSwiftなどは当初、難しいと感じましたが、論理的に考えながらものを作ることができる体験にやみつきになり、エンジニアとしての転職を考えるまでになりました。通っていたテックスクールは6月に卒業しましたが、それ以降もインターネット上のニュースサイト、ブログサイトなどを見たり、チュートリアルをおこない、また、勉強会やもくもく会に参加するなど日常的な学習は絶えずおこなっています。</p>
+                <p>さまざまなクライアント様の広告を制作していくうちに、「自分自身でもなにかサービスを作りたい」という思いからプログラミングの学習を始めました。しかし、独学ではなかなか身につかなかったということがあり、昨年末からテックスクールに通い、本格的に学習を始めました。HTMLやCSSや少し扱ったことがありましたが、PHPやSwiftなどは複雑で当初、難しいと感じましたが、論理的に考えながらものを作ることができる体験にハマり、エンジニアとしての転職を考えるようになりました。<br>通っていたテックスクールは6月に卒業しましたが、それ以降もインターネット上のニュースサイト、ブログサイトなどを見たり、チュートリアルをおこない、また、勉強会やもくもく会に参加するなど日常的な学習は絶えずおこなっています。</p>
             </div>
         </div>
     </div>
@@ -209,7 +209,7 @@
         	<div class="expertiesdesc col-xs-12 col-sm-9 col-md-9 col-lg-9">
             	<h4>音楽環境創造科 文化社会学専攻</h4>
                 <h5>東京藝術大学</h5>
-                <p>この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。(340文字)</p>
+                <p>同期が20名しかいない小規模な学科で、文化社会学という学問を学びました。沖縄の民謡やアニソンのイベントなどの研究をおこなう同期とともに、私はもともと好きであったグラビア雑誌が日本でどのように広まったか、について研究をおこないました。大学時代は自主制作雑誌を制作し、コミケなどの即売会などにも頻繁に参加していました。</p>
             </div>
         </div>
 
@@ -218,7 +218,7 @@
   <!--Education & diploma end -->
   
     <!--Portfolio start -->
-  <section id="experience" class="myexperties">
+  <section id="portfolio" class="myportfolio">
     <div class="container">
         <div class="heading">
         <h2>ポートフォリオ</h2>
@@ -235,7 +235,7 @@
               <h4>診断サイト</h4>
                 <h5>セブ島留学生のための生活費</h5>
                 <img src ="images/projects/big-images/work01.jpg" width = "200px">
-                <p>フィリピン、セブ島に語学留学のため訪れる日本人留学生のため、質問に答えると診断結果を見ることができるサイトを制作しました。診断画面の他、管理者画面からは回答者のデータの閲覧や問題の変更をおこなうことができます。同じテックスクールに通っていたメンバー3名とともに、総勢4名のチームで制作をおこないました。企画、TR図の制作、SQLの設定、大部分のコーディング、チームマネジメントをおこないました。</p>
+                <p>フィリピン、セブ島に語学留学のため訪れる日本人留学生のため、質問に答えると診断結果を見ることができるサイトを制作しました。診断画面の他、管理者画面からは回答者のデータの閲覧や問題の変更をおこなうことができます。<br>同じテックスクールに通っていたメンバー3名とともに、総勢4名のチームで制作をおこないました。企画、TR図の制作、SQLの設定、コーディング、チームマネジメントをおこないました。</p>
                 <p><a href = "https://cebucost.herokuapp.com/" target = "_blank">サイト（リンク）</a></p>
                 <p><a href = "https://qiita.com/yasasheee/items/8a83735153e176c80bb3" target = "_blank">Qiita（リンク）</a></p>
                 <p><a href = "https://github.com/tyebone/49costcut" target = "_blank">GitHub（リンク）</a></p>
@@ -266,7 +266,7 @@
               <h4>パーティーピーポーのためのアプリ</h4>
                 <h5>ドッキリサウンド</h5>
                 <img src ="images/projects/big-images/work03.jpg" width = "200px">
-                <p>テレビでおなじみのドッキリサウンドを楽しめることができるアプリを制作しています。。日本語、英語、韓国語、中国語の言語を選び、使用することを目指しています。まだリリースしていません。</p>
+                <p>テレビでおなじみのドッキリサウンドを楽しめることができるアプリを制作しています。日本語、英語、韓国語、中国語の言語を選び、使用することを目指しています。iOS未承認です。</p>
                 <p><a href = "https://github.com/ogikubonemui/dokiri" target = "_blank">GitHub（リンク）</a></p>
             </div>
             </div>
@@ -275,7 +275,7 @@
   <!--Portfolio end -->
 
     <!--Education & diploma start -->
-  <section id="education" class="educationdiploma">
+  <section id="target" class="mytarget">
     <div class="container">
         <div class="heading">
         <h2>目標</h2>
@@ -290,7 +290,7 @@
           <div class="expertiesdesc col-xs-12 col-sm-9 col-md-9 col-lg-9">
               <h4>勉強会を主催したい</h4>
                 <h5>フルスタックエンジニア</h5>
-                <p>こフロント、バック問わず活躍できるフルスタックエンジニアを目指したいです。また、前職でさまざまな職種の方と関わってきた経験を活かし、チームマネジメントなども将来的におこなうことができるようになりたいです。そのために勉強会への参加、またいずれは勉強会の運営などもおこなっていきたいです。エンジニアの方のコミュニティを作る文化が好きなので、僕自身、日々学んで行く姿勢を忘れないようにしたいです。</p>
+                <p>フロント、バック問わず活躍できるフルスタックエンジニアを目指したいです。また、前職でさまざまな職種の方と関わってきた経験を活かし、チームマネジメントなども将来的におこなうことができるようになりたいです。そのために勉強会への参加、またいずれは勉強会の運営などもおこなっていきたいです。<br>会社内の業務を一生懸命続けながら、自分のプロダクトも作るなど、エンジニア、マネジメント、プランニングなどさまざまな視点を持ちながらエンジニア道を邁進していきたいです。</p>
             </div>
         </div>
     </div>
@@ -331,12 +331,12 @@ $(document).ready( function() {
 	$('.navbar-wrapper').stickUp({
 		parts: {
 		  0: 'banner',
-		  1: 'aboutus',
+		  1: 'aboutme',
 		  2: 'skillset',
 		  3: 'experience',
 		  4: 'education',
-		  5: 'ourwork',
-		  6: 'contact'
+		  5: 'portfolio',
+		  6: 'target'
 		},
 		itemClass: 'menuItem',
 		itemHover: 'active',
