[fix]トップ画像を差し替え

--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@
     <div class="banner row" id="banner">
     <div class="bannerText">
         <h1>Yasuyuki Takeshita</h1>
-        <h3>Amateur Engineer</h3>
+        <h2>Beginner programmer</h2>
       </div>
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 noPadd slides-container" style="height:100%"> 
         <!--background slide show start-->
         <div class="slide"> 
-          <img src="images/header-image/image03.jpg" alt="image03"> </div>
+          <img src="images/header-image/image05.jpg" alt="image05"> </div>
         <div class="slide"> 
-          <img src="images/header-image/image03.jpg" alt="image03"> </div>
+          <img src="images/header-image/image05.jpg" alt="image05"> </div>
         <!--background slide show end--> 
       </div>
     </div>
