[fix]プロフィールページの文言調整

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       	<div class=" col-lg-7 col-md-7 col-sm-7 col-xs-12 pull-left media">
         	<h5>竹下 泰幸</h5>
             <!-- <h4>アマチュアエンジニア</h4> -->
-            <p>1988年、熊本県出身。子どもの頃から、ものをつくることが好きで、絵本や歌を自作していました。2010年、東京藝術大学音楽環境創造科に入学。文化社会学専攻に所属し、日本の「雑誌史」の研究や映像制作をおこないました。2014年、株式会社博報堂プロダクツ企画演出部に入社。おもにTVCMの企画や演出業務をおこないました。おもなクライアントとしてYAHOO!様、Apple様、トヨタ自動車様などの案件を担当致しました。<br>2019年11月末に退職。現在、エンジニアとしての活動を目指し、転職活動をおこなっています。趣味は筋トレとアニメ鑑賞、タロット占いです。</p>
+            <p>1988年、熊本県出身。子どもの頃から、ものをつくることが好きで、絵本や歌を自作していました。2010年、東京藝術大学音楽環境創造科に入学。文化社会学専攻に所属し、日本の「雑誌史」の研究や映像制作をおこないました。2014年、株式会社博報堂プロダクツ企画演出部に入社。おもにTVCMの企画や演出業務をおこないました。おもなクライアントとしてYAHOO!様、Apple様、トヨタ自動車様などの案件を担当致しました。<br>2019年11月末に退職。現在、エンジニアとしての活動を目指し、転職活動をおこなっています。趣味は筋トレとアニメ鑑賞、野球の応援、タロット占いです。</p>
 <p><a role="button" class="btn btn-primary btn-lg" href="../rirekisyo.pdf" download target="_blank">履歴書（PDF）を見る</a></p>
         </div>
       	
