--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       </div> 
        </div> 
       <div class="row">
-      <div class=" col-lg-4 col-md-4 col-sm-4 col-xs-12 pull-right media"><img src="images/take_img.jpg" alt=""></div>
+      <div class=" col-lg-4 col-md-4 col-sm-4 col-xs-12 pull-right media"><img src="images/photo_forportfolio.jpg" alt=""></div>
       	<div class=" col-lg-7 col-md-7 col-sm-7 col-xs-12 pull-left media">
         	<h5>竹下 泰幸</h5>
             <!-- <h4>アマチュアエンジニア</h4> -->
