[fix]ポートフォリオページの文言修正

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
               <h4>診断サイト</h4>
                 <h5>セブ島留学生のための生活費診断サイト</h5>
                 <img src ="images/projects/big-images/work01.jpg" width = "200px">
-                <p>フィリピン、セブ島に語学留学のため訪れる日本人留学生のため、質問に答えると診断結果を見ることができるサイトを制作しました。診断画面の他、管理者画面からは回答者のデータの閲覧や問題の変更をおこなうことができます。<br>同じテックスクールに通っていたメンバー3名とともに、総勢4名のチームで制作をおこないました。企画、TR図の制作、SQLの設定、コーディング、チームマネジメントをおこないました。</p>
+                <p>フィリピン、セブ島に語学留学のため訪れる日本人留学生のため、質問に答えると診断結果を見ることができるサイトを制作しました。診断画面の他、管理者画面からは回答者のデータの閲覧や問題の変更をおこなうことができます。<br>同じテックスクールに通っていたメンバー3名とともに、総勢4名のチームで制作をおこないました。企画、フレームワークの制作、SQLの設定、コーディング、チームマネジメントをおこないました。</p>
                 <p><a href = "https://cebucost.herokuapp.com/" target = "_blank">サイト（リンク）</a></p>
                 <p><a href = "https://qiita.com/yasasheee/items/8a83735153e176c80bb3" target = "_blank">Qiita（リンク）</a></p>
                 <p><a href = "https://github.com/tyebone/49costcut" target = "_blank">GitHub（リンク）</a></p>
