[fix]ターゲットページの文言修正

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
           <div class="expertiesdesc col-xs-12 col-sm-9 col-md-9 col-lg-9">
               <h4>勉強会を主催したい</h4>
                 <h5>フルスタックエンジニア</h5>
-                <p>フロント、バック問わず活躍できるフルスタックエンジニアを目指したいです。また、前職でさまざまな職種の方と関わってきた経験を活かし、チームマネジメントなども将来的におこなうことができるようになりたいです。そのために勉強会への参加、またいずれは勉強会の運営などもおこなっていきたいです。<br>会社内の業務を一生懸命続けながら、自分のプロダクトも作るなど、エンジニア、マネジメント、プランニングなどさまざまな視点を持ちながらエンジニア道を邁進していきたいです。</p>
+                <p>フロントエンド、バックエンド問わず活躍できるフルスタックエンジニアを目指したいです。また、前職でさまざまな職種の方と関わってきた経験を活かし、チームマネジメントなども将来的におこなうことができるようになりたいです。そのために勉強会への参加、またいずれは勉強会の運営などもおこなっていきたいです。<br>会社内の業務を一生懸命続けながら、自分のプロダクトも作るなど、エンジニア、マネジメント、プランニングなどさまざまな視点を持ちながらエンジニア道を邁進していきたいです。</p>
             </div>
         </div>
     </div>
