[fix]冒頭の自己紹介ページの文言修正

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <div class="col-md-12">
             	<div class="col-md-6 col-sm-12 media">
                 	<p>
-                  会社員一年目から独学にてプログラミング学習をおこなっていましたが、会社の業務が忙しすぎて挫折。昨年から真剣に取り組むため、東京都内のテックスクールに通い、PHP、MYSQLとSwiftを3ヶ月ずつ勉強しました。それぞれサービスを作りながら覚えました。<br>今年6月にスクールのカリキュラムは終え、インターネット上のチュートリアルをおこなったり、書籍での独習、また勉強会に参加するなどして自分自身のスキル向上を日常的に心がけています。
+                  2014年頃からHTMLとCSSの技術は独習してまいりましたが、2018年末より東京都内のテックスクールに通い、PHP、MYSQLとSwiftを3ヶ月ずつ勉強しました。それぞれサービスを作りながら覚えました。<br>今年6月にスクールのカリキュラムは終え、インターネット上のチュートリアルをおこなったり、書籍での独習、また勉強会に参加するなどして自分自身のスキル向上を日常的に心がけています。
                   </p>
                 </div>
             	<div class="col-md-6 col-sm-12">                
